# GPT1-From-Scratch

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
scripts/: generate.py  train.py
src/: config.py  dataset.py  model.py  utils.py
tests/: test_model.py
